[project]
name = "hasura-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "fastapi>=0.115.7",
    "pre-commit>=4.1.0",
    "pydantic-settings>=2.7.1",
    "tortoise-orm[asyncmy]>=0.24.0",
    "uvicorn>=0.34.0",
]
